Colab Notebook with Torch and TF implementations

--- a/PointNet++_PyTorch_Tensorflow.ipynb
+++ b/PointNet++_PyTorch_Tensorflow.ipynb
@@ -51,6 +51,30 @@
     {
       "cell_type": "code",
       "source": [
+        "def square_distance(src, dst):\n",
+        "    \"\"\"\n",
+        "    Calculate Euclid distance between each two points.\n",
+        "\n",
+        "    src^T * dst = xn * xm + yn * ym + zn * zm；\n",
+        "    sum(src^2, dim=-1) = xn*xn + yn*yn + zn*zn;\n",
+        "    sum(dst^2, dim=-1) = xm*xm + ym*ym + zm*zm;\n",
+        "    dist = (xn - xm)^2 + (yn - ym)^2 + (zn - zm)^2\n",
+        "         = sum(src**2,dim=-1)+sum(dst**2,dim=-1)-2*src^T*dst\n",
+        "\n",
+        "    Input:\n",
+        "        src: source points, [B, N, C]\n",
+        "        dst: target points, [B, M, C]\n",
+        "    Output:\n",
+        "        dist: per-point square distance, [B, N, M]\n",
+        "    \"\"\"\n",
+        "    B, N, _ = src.shape\n",
+        "    _, M, _ = dst.shape\n",
+        "    dist = -2 * torch.matmul(src, dst.permute(0, 2, 1))\n",
+        "    dist += torch.sum(src ** 2, -1).view(B, N, 1)\n",
+        "    dist += torch.sum(dst ** 2, -1).view(B, 1, M)\n",
+        "    return dist\n",
+        "\n",
+        "\n",
         "def index_points(points, idx):\n",
         "    \"\"\"\n",
         "\n",
@@ -345,29 +369,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def square_distance(src, dst):\n",
-        "    \"\"\"\n",
-        "    Calculate Euclid distance between each two points.\n",
-        "\n",
-        "    src^T * dst = xn * xm + yn * ym + zn * zm；\n",
-        "    sum(src^2, dim=-1) = xn*xn + yn*yn + zn*zn;\n",
-        "    sum(dst^2, dim=-1) = xm*xm + ym*ym + zm*zm;\n",
-        "    dist = (xn - xm)^2 + (yn - ym)^2 + (zn - zm)^2\n",
-        "         = sum(src**2,dim=-1)+sum(dst**2,dim=-1)-2*src^T*dst\n",
-        "\n",
-        "    Input:\n",
-        "        src: source points, [B, N, C]\n",
-        "        dst: target points, [B, M, C]\n",
-        "    Output:\n",
-        "        dist: per-point square distance, [B, N, M]\n",
-        "    \"\"\"\n",
-        "    B, N, _ = src.shape\n",
-        "    _, M, _ = dst.shape\n",
-        "    dist = -2 * tf.linalg.matmul(src, tf.transpose(dst, perm=[0, 2, 1]))\n",
-        "    dist += tf.reshape(tf.math.reduce_sum(src ** 2, axis=-1), (B, N, 1))\n",
-        "    dist += tf.reshape(tf.math.reduce_sum(dst ** 2, -1), (B, 1, M))\n",
-        "    return dist\n",
-        "\n",
         "def index_points(points, idx):\n",
         "    \"\"\"\n",
         "\n",
