Colab Notebook with Torch and TF implementations

--- a/PointNet++_PyTorch_Tensorflow.ipynb
+++ b/PointNet++_PyTorch_Tensorflow.ipynb
@@ -655,7 +655,7 @@
         "        # Sample and Grouping\n",
         "        _, nsample, _ = xyz.shape\n",
         "        if self.group_all:\n",
-        "            new_xyz, new_points, idx, grouped_xyz = SampleAndGroupAll(xyz, points, self.use_xyz)(xyz, points)\n",
+        "            new_xyz, new_points, idx, grouped_xyz = SampleAndGroupAll(self.use_xyz)(xyz, points)\n",
         "        else:\n",
         "            new_xyz, new_points, idx, grouped_xyz = SampleAndGroup(self.npoint, self.radius, nsample, self.use_xyz)(xyz, points)\n",
         "\n",
