--- a/PointNet++_PyTorch_Tensorflow.ipynb
+++ b/PointNet++_PyTorch_Tensorflow.ipynb
@@ -653,11 +653,10 @@
         "\n",
         "    def call(self, xyz, points):\n",
         "        # Sample and Grouping\n",
-        "        _, nsample, _ = xyz.shape\n",
         "        if self.group_all:\n",
-        "            new_xyz, new_points, idx, grouped_xyz = SampleAndGroupAll(self.use_xyz)(xyz, points)\n",
+        "            new_xyz, new_points, idx, grouped_xyz = sample_and_group_all(xyz, points, self.use_xyz)\n",
         "        else:\n",
-        "            new_xyz, new_points, idx, grouped_xyz = SampleAndGroup(self.npoint, self.radius, nsample, self.use_xyz)(xyz, points)\n",
+        "            new_xyz, new_points, idx, grouped_xyz = sample_and_group(self.npoint, self.radius, nsample, xyz, points, self.use_xyz)\n",
         "\n",
         "        # Point Feature Embedding\n",
         "        if self.use_nchw:\n",
