PointNet++_PyTorch_Tensorflow.ipynb

--- a/PointNet++_PyTorch_Tensorflow.ipynb
+++ b/PointNet++_PyTorch_Tensorflow.ipynb
@@ -656,7 +656,7 @@
         "        if self.group_all:\n",
         "            new_xyz, new_points, idx, grouped_xyz = sample_and_group_all(xyz, points, self.use_xyz)\n",
         "        else:\n",
-        "            new_xyz, new_points, idx, grouped_xyz = sample_and_group(self.npoint, self.radius, nsample, xyz, points, self.use_xyz)\n",
+        "            new_xyz, new_points, idx, grouped_xyz = sample_and_group(self.npoint, self.radius, self.nsample, xyz, points, self.use_xyz)\n",
         "\n",
         "        # Point Feature Embedding\n",
         "        if self.use_nchw:\n",
